# LatSim

./: .gitignore  Makefile.am  acinclude.m4  build.sh  configure.ac  update_eigen.sh
examples/: Makefile.am  exIndex.cpp  exMatCommBench.cpp  exMatLibBench.cpp  exMatOpBench.cpp  exOp.cpp  exScalCommBench.cpp  exScalOpBench.cpp  exScalarSim.cpp
lib/: Expressions.cpp  Expressions.hpp  Global.cpp  Global.hpp  Hmc.hpp  Integrator.hpp  LatOp.hpp  Lattice.hpp  Layout.cpp  Layout.hpp  Logger.cpp  Logger.hpp  Makefile.am  MpiTypes.hpp  OmelyanIntegrator.hpp  Phi4.hpp  VerletIntegrator.hpp  includes.hpp
