nobase_dist_pkginclude_HEADERS =\
    Expressions.hpp       \
    Global.hpp            \
    Hmc.hpp               \
    Integrator.hpp        \
    Lattice.hpp           \
    Layout.hpp            \
    LatOp.hpp             \
    Logger.hpp            \
    MpiTypes.hpp          \
    Phi4.hpp              \
    OmelyanIntegrator.hpp \
    VerletIntegrator.hpp

ACLOCAL_AMFLAGS = -I .buildutils/m4
